practica3/src/y.output
State 162 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera Bloque

    2 Cabecera: INICIO PAREN_IZQ PAREN_DER

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER
    5                         | %empty

    6 Cuerpo_variables: Cuerpo_variables Declar_variables
    7                 | Declar_variables

    8 Declar_variables: Tipo Lista_ident DELIMIT
    9                 | error

   10 Tipo: Tipo_dato
   11     | Tipo_lista

   12 Tipo_dato: TIPO

   13 Tipo_lista: TIPO_LIST Tipo_dato

   14 Lista_ident: Lista_ident SEPAR IDENT
   15            | Lista_ident error IDENT
   16            | IDENT

   17 Declar_funciones: Declar_funciones Declar_funcion
   18                 | %empty

   19 Cabecera_funcion: TIPO IDENT PAREN_IZQ Lista_parametros PAREN_DER
   20                 | error

   21 Declar_funcion: Cabecera_funcion Bloque

   22 Lista_parametros: Lista_parametros SEPAR Parametro
   23                 | Lista_parametros error Parametro
   24                 | Parametro
   25                 | %empty

   26 Parametro: TIPO IDENT

   27 Sentencias: Sentencias Sentencia
   28           | Sentencia

   29 Sentencia: Bloque
   30          | Sentencia_asig DELIMIT
   31          | Sentencia_if
   32          | Sentencia_while
   33          | Sentencia_for
   34          | Sentencia_entrada DELIMIT
   35          | Sentencia_salida DELIMIT
   36          | Sentencia_return DELIMIT
   37          | Sentencia_iterar DELIMIT
   38          | Sentencia_comienzo DELIMIT

   39 Sentencia_asig: IDENT IGUAL Expresion

   40 Lista_expresiones: Lista_expresiones SEPAR Expresion
   41                  | Lista_expresiones error Expresion
   42                  | Expresion

   43 Expresion: PAREN_IZQ Expresion PAREN_DER
   44          | OP_UNARIO Expresion
   45          | MAS_MENOS Expresion
   46          | Expresion MAS_MENOS Expresion
   47          | Expresion OP_BIN_LISTA Expresion
   48          | Expresion OP_LIST_CONCA Expresion
   49          | Expresion OP_OR Expresion
   50          | Expresion OP_XOR Expresion
   51          | Expresion OP_AND Expresion
   52          | Expresion OP_RELACION Expresion
   53          | Expresion OP_IGUALDAD Expresion
   54          | Expresion OP_MULTI_DIV Expresion
   55          | Expresion MAS_MAS Expresion OP_GET_LIST Expresion
   56          | IDENT
   57          | Constante
   58          | IDENT PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT PAREN_IZQ PAREN_DER
   60          | error

   61 Constante: CONST_BOOL
   62          | CONST_CAR
   63          | CONST_ENT
   64          | CONST_REAL
   65          | Constante_lista

   66 Constante_lista: CORCH_IZQ Lista_bool CORCH_DER
   67                | CORCH_IZQ Lista_car CORCH_DER
   68                | CORCH_IZQ Lista_ent CORCH_DER
   69                | CORCH_IZQ Lista_real CORCH_DER
   70                | CORCH_IZQ CORCH_DER

   71 Lista_bool: Lista_bool SEPAR CONST_BOOL
   72           | CONST_BOOL

   73 Lista_car: Lista_car SEPAR CONST_CAR
   74          | CONST_CAR

   75 Lista_ent: Lista_ent SEPAR CONST_ENT
   76          | CONST_ENT

   77 Lista_real: Lista_real SEPAR CONST_REAL
   78           | CONST_REAL

   79 Sentencia_if: COND_SI PAREN_IZQ Expresion PAREN_DER Sentencia
   80             | COND_SI PAREN_IZQ Expresion PAREN_DER Sentencia COND_OTRO Sentencia

   81 Sentencia_while: BUCLE PAREN_IZQ Expresion PAREN_DER Sentencia

   82 Sentencia_for: FOR_INI Sentencia_asig FOR_STOP Expresion FOR_STEP Expresion FOR_DO Sentencia

   83 Sentencia_entrada: ENTRADA Lista_ident

   84 Sentencia_salida: SALIDA Lista_expr_cadena

   85 Lista_expr_cadena: Lista_expr_cadena SEPAR Expr_cadena
   86                  | Expr_cadena

   87 Expr_cadena: Expresion
   88            | CONST_CADENA

   89 Sentencia_return: DEVUELVE Expresion

   90 Sentencia_iterar: Expresion OP_AVR_RETR

   91 Sentencia_comienzo: OP_INI_LIST Expresion


Terminals, with rules where they appear

$end (0) 0
error (256) 9 15 20 23 41 60
OP_OR (258) 49
OP_XOR (259) 50
OP_AND (260) 51
OP_IGUALDAD (261) 53
OP_RELACION (262) 52
MAS_MENOS (263) 45 46
MAS_MAS (264) 55
OP_LIST_CONCA (265) 48
OP_BIN_LISTA (266) 47
OP_GET_LIST (267) 55
OP_MULTI_DIV (268) 54
OP_UNARIO (269) 44
INICIO (270) 2
PAREN_IZQ (271) 2 19 43 58 59 79 80 81
PAREN_DER (272) 2 19 43 58 59 79 80 81
CORCH_IZQ (273) 66 67 68 69 70
CORCH_DER (274) 66 67 68 69 70
LLAVE_IZQ (275) 3
LLAVE_DER (276) 3
VAR_IZQ (277) 4
VAR_DER (278) 4
DELIMIT (279) 8 30 34 35 36 37 38
SEPAR (280) 14 22 40 71 73 75 77 85
TIPO (281) 12 19 26
TIPO_LIST (282) 13
IDENT (283) 14 15 16 19 26 39 56 58 59
CONST_BOOL (284) 61 71 72
CONST_CAR (285) 62 73 74
CONST_CADENA (286) 88
CONST_ENT (287) 63 75 76
CONST_REAL (288) 64 77 78
IGUAL (289) 39
COND_SI (290) 79 80
COND_OTRO (291) 80
BUCLE (292) 81
FOR_INI (293) 82
FOR_STOP (294) 82
FOR_STEP (295) 82
FOR_DO (296) 82
ENTRADA (297) 83
SALIDA (298) 84
DEVUELVE (299) 89
OP_INI_LIST (300) 91
OP_AVR_RETR (301) 90


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Programa (48)
    on left: 1, on right: 0
Cabecera (49)
    on left: 2, on right: 1
Bloque (50)
    on left: 3, on right: 1 21 29
Declar_variables_locales (51)
    on left: 4 5, on right: 3
Cuerpo_variables (52)
    on left: 6 7, on right: 4 6
Declar_variables (53)
    on left: 8 9, on right: 6 7
Tipo (54)
    on left: 10 11, on right: 8
Tipo_dato (55)
    on left: 12, on right: 10 13
Tipo_lista (56)
    on left: 13, on right: 11
Lista_ident (57)
    on left: 14 15 16, on right: 8 14 15 83
Declar_funciones (58)
    on left: 17 18, on right: 3 17
Cabecera_funcion (59)
    on left: 19 20, on right: 21
Declar_funcion (60)
    on left: 21, on right: 17
Lista_parametros (61)
    on left: 22 23 24 25, on right: 19 22 23
Parametro (62)
    on left: 26, on right: 22 23 24
Sentencias (63)
    on left: 27 28, on right: 3 27
Sentencia (64)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 28 79 80 81
    82
Sentencia_asig (65)
    on left: 39, on right: 30 82
Lista_expresiones (66)
    on left: 40 41 42, on right: 40 41 58
Expresion (67)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 79
    80 81 82 87 89 90 91
Constante (68)
    on left: 61 62 63 64 65, on right: 57
Constante_lista (69)
    on left: 66 67 68 69 70, on right: 65
Lista_bool (70)
    on left: 71 72, on right: 66 71
Lista_car (71)
    on left: 73 74, on right: 67 73
Lista_ent (72)
    on left: 75 76, on right: 68 75
Lista_real (73)
    on left: 77 78, on right: 69 77
Sentencia_if (74)
    on left: 79 80, on right: 31
Sentencia_while (75)
    on left: 81, on right: 32
Sentencia_for (76)
    on left: 82, on right: 33
Sentencia_entrada (77)
    on left: 83, on right: 34
Sentencia_salida (78)
    on left: 84, on right: 35
Lista_expr_cadena (79)
    on left: 85 86, on right: 84 85
Expr_cadena (80)
    on left: 87 88, on right: 85 86
Sentencia_return (81)
    on left: 89, on right: 36
Sentencia_iterar (82)
    on left: 90, on right: 37
Sentencia_comienzo (83)
    on left: 91, on right: 38


State 0

    0 $accept: . Programa $end

    INICIO  shift, and go to state 1

    Programa  go to state 2
    Cabecera  go to state 3


State 1

    2 Cabecera: INICIO . PAREN_IZQ PAREN_DER

    PAREN_IZQ  shift, and go to state 4


State 2

    0 $accept: Programa . $end

    $end  shift, and go to state 5


State 3

    1 Programa: Cabecera . Bloque

    LLAVE_IZQ  shift, and go to state 6

    Bloque  go to state 7


State 4

    2 Cabecera: INICIO PAREN_IZQ . PAREN_DER

    PAREN_DER  shift, and go to state 8


State 5

    0 $accept: Programa $end .

    $default  accept


State 6

    3 Bloque: LLAVE_IZQ . Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    VAR_IZQ  shift, and go to state 9

    $default  reduce using rule 5 (Declar_variables_locales)

    Declar_variables_locales  go to state 10


State 7

    1 Programa: Cabecera Bloque .

    $default  reduce using rule 1 (Programa)


State 8

    2 Cabecera: INICIO PAREN_IZQ PAREN_DER .

    $default  reduce using rule 2 (Cabecera)


State 9

    4 Declar_variables_locales: VAR_IZQ . Cuerpo_variables VAR_DER

    error      shift, and go to state 11
    TIPO       shift, and go to state 12
    TIPO_LIST  shift, and go to state 13

    Cuerpo_variables  go to state 14
    Declar_variables  go to state 15
    Tipo              go to state 16
    Tipo_dato         go to state 17
    Tipo_lista        go to state 18


State 10

    3 Bloque: LLAVE_IZQ Declar_variables_locales . Declar_funciones Sentencias LLAVE_DER

    $default  reduce using rule 18 (Declar_funciones)

    Declar_funciones  go to state 19


State 11

    9 Declar_variables: error .

    $default  reduce using rule 9 (Declar_variables)


State 12

   12 Tipo_dato: TIPO .

    $default  reduce using rule 12 (Tipo_dato)


State 13

   13 Tipo_lista: TIPO_LIST . Tipo_dato

    TIPO  shift, and go to state 12

    Tipo_dato  go to state 20


State 14

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables . VAR_DER
    6 Cuerpo_variables: Cuerpo_variables . Declar_variables

    error      shift, and go to state 11
    VAR_DER    shift, and go to state 21
    TIPO       shift, and go to state 12
    TIPO_LIST  shift, and go to state 13

    Declar_variables  go to state 22
    Tipo              go to state 16
    Tipo_dato         go to state 17
    Tipo_lista        go to state 18


State 15

    7 Cuerpo_variables: Declar_variables .

    $default  reduce using rule 7 (Cuerpo_variables)


State 16

    8 Declar_variables: Tipo . Lista_ident DELIMIT

    IDENT  shift, and go to state 23

    Lista_ident  go to state 24


State 17

   10 Tipo: Tipo_dato .

    $default  reduce using rule 10 (Tipo)


State 18

   11 Tipo: Tipo_lista .

    $default  reduce using rule 11 (Tipo)


State 19

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones . Sentencias LLAVE_DER
   17 Declar_funciones: Declar_funciones . Declar_funcion

    error        shift, and go to state 25
    MAS_MENOS    shift, and go to state 26
    OP_UNARIO    shift, and go to state 27
    PAREN_IZQ    shift, and go to state 28
    CORCH_IZQ    shift, and go to state 29
    LLAVE_IZQ    shift, and go to state 6
    TIPO         shift, and go to state 30
    IDENT        shift, and go to state 31
    CONST_BOOL   shift, and go to state 32
    CONST_CAR    shift, and go to state 33
    CONST_ENT    shift, and go to state 34
    CONST_REAL   shift, and go to state 35
    COND_SI      shift, and go to state 36
    BUCLE        shift, and go to state 37
    FOR_INI      shift, and go to state 38
    ENTRADA      shift, and go to state 39
    SALIDA       shift, and go to state 40
    DEVUELVE     shift, and go to state 41
    OP_INI_LIST  shift, and go to state 42

    Bloque              go to state 43
    Cabecera_funcion    go to state 44
    Declar_funcion      go to state 45
    Sentencias          go to state 46
    Sentencia           go to state 47
    Sentencia_asig      go to state 48
    Expresion           go to state 49
    Constante           go to state 50
    Constante_lista     go to state 51
    Sentencia_if        go to state 52
    Sentencia_while     go to state 53
    Sentencia_for       go to state 54
    Sentencia_entrada   go to state 55
    Sentencia_salida    go to state 56
    Sentencia_return    go to state 57
    Sentencia_iterar    go to state 58
    Sentencia_comienzo  go to state 59


State 20

   13 Tipo_lista: TIPO_LIST Tipo_dato .

    $default  reduce using rule 13 (Tipo_lista)


State 21

    4 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER .

    $default  reduce using rule 4 (Declar_variables_locales)


State 22

    6 Cuerpo_variables: Cuerpo_variables Declar_variables .

    $default  reduce using rule 6 (Cuerpo_variables)


State 23

   16 Lista_ident: IDENT .

    $default  reduce using rule 16 (Lista_ident)


State 24

    8 Declar_variables: Tipo Lista_ident . DELIMIT
   14 Lista_ident: Lista_ident . SEPAR IDENT
   15            | Lista_ident . error IDENT

    error    shift, and go to state 60
    DELIMIT  shift, and go to state 61
    SEPAR    shift, and go to state 62


State 25

   20 Cabecera_funcion: error .
   60 Expresion: error .

    LLAVE_IZQ  reduce using rule 20 (Cabecera_funcion)
    $default   reduce using rule 60 (Expresion)


State 26

   45 Expresion: MAS_MENOS . Expresion

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 65
    Constante        go to state 50
    Constante_lista  go to state 51


State 27

   44 Expresion: OP_UNARIO . Expresion

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 66
    Constante        go to state 50
    Constante_lista  go to state 51


State 28

   43 Expresion: PAREN_IZQ . Expresion PAREN_DER

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 67
    Constante        go to state 50
    Constante_lista  go to state 51


State 29

   66 Constante_lista: CORCH_IZQ . Lista_bool CORCH_DER
   67                | CORCH_IZQ . Lista_car CORCH_DER
   68                | CORCH_IZQ . Lista_ent CORCH_DER
   69                | CORCH_IZQ . Lista_real CORCH_DER
   70                | CORCH_IZQ . CORCH_DER

    CORCH_DER   shift, and go to state 68
    CONST_BOOL  shift, and go to state 69
    CONST_CAR   shift, and go to state 70
    CONST_ENT   shift, and go to state 71
    CONST_REAL  shift, and go to state 72

    Lista_bool  go to state 73
    Lista_car   go to state 74
    Lista_ent   go to state 75
    Lista_real  go to state 76


State 30

   19 Cabecera_funcion: TIPO . IDENT PAREN_IZQ Lista_parametros PAREN_DER

    IDENT  shift, and go to state 77


State 31

   39 Sentencia_asig: IDENT . IGUAL Expresion
   56 Expresion: IDENT .
   58          | IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  shift, and go to state 78
    IGUAL      shift, and go to state 79

    $default  reduce using rule 56 (Expresion)


State 32

   61 Constante: CONST_BOOL .

    $default  reduce using rule 61 (Constante)


State 33

   62 Constante: CONST_CAR .

    $default  reduce using rule 62 (Constante)


State 34

   63 Constante: CONST_ENT .

    $default  reduce using rule 63 (Constante)


State 35

   64 Constante: CONST_REAL .

    $default  reduce using rule 64 (Constante)


State 36

   79 Sentencia_if: COND_SI . PAREN_IZQ Expresion PAREN_DER Sentencia
   80             | COND_SI . PAREN_IZQ Expresion PAREN_DER Sentencia COND_OTRO Sentencia

    PAREN_IZQ  shift, and go to state 80


State 37

   81 Sentencia_while: BUCLE . PAREN_IZQ Expresion PAREN_DER Sentencia

    PAREN_IZQ  shift, and go to state 81


State 38

   82 Sentencia_for: FOR_INI . Sentencia_asig FOR_STOP Expresion FOR_STEP Expresion FOR_DO Sentencia

    IDENT  shift, and go to state 82

    Sentencia_asig  go to state 83


State 39

   83 Sentencia_entrada: ENTRADA . Lista_ident

    IDENT  shift, and go to state 23

    Lista_ident  go to state 84


State 40

   84 Sentencia_salida: SALIDA . Lista_expr_cadena

    error         shift, and go to state 63
    MAS_MENOS     shift, and go to state 26
    OP_UNARIO     shift, and go to state 27
    PAREN_IZQ     shift, and go to state 28
    CORCH_IZQ     shift, and go to state 29
    IDENT         shift, and go to state 64
    CONST_BOOL    shift, and go to state 32
    CONST_CAR     shift, and go to state 33
    CONST_CADENA  shift, and go to state 85
    CONST_ENT     shift, and go to state 34
    CONST_REAL    shift, and go to state 35

    Expresion          go to state 86
    Constante          go to state 50
    Constante_lista    go to state 51
    Lista_expr_cadena  go to state 87
    Expr_cadena        go to state 88


State 41

   89 Sentencia_return: DEVUELVE . Expresion

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 89
    Constante        go to state 50
    Constante_lista  go to state 51


State 42

   91 Sentencia_comienzo: OP_INI_LIST . Expresion

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 90
    Constante        go to state 50
    Constante_lista  go to state 51


State 43

   29 Sentencia: Bloque .

    $default  reduce using rule 29 (Sentencia)


State 44

   21 Declar_funcion: Cabecera_funcion . Bloque

    LLAVE_IZQ  shift, and go to state 6

    Bloque  go to state 91


State 45

   17 Declar_funciones: Declar_funciones Declar_funcion .

    $default  reduce using rule 17 (Declar_funciones)


State 46

    3 Bloque: LLAVE_IZQ Declar_variables_locales Declar_funciones Sentencias . LLAVE_DER
   27 Sentencias: Sentencias . Sentencia

    error        shift, and go to state 63
    MAS_MENOS    shift, and go to state 26
    OP_UNARIO    shift, and go to state 27
    PAREN_IZQ    shift, and go to state 28
    CORCH_IZQ    shift, and go to state 29
    LLAVE_IZQ    shift, and go to state 6
    LLAVE_DER    shift, and go to state 92
    IDENT        shift, and go to state 31
    CONST_BOOL   shift, and go to state 32
    CONST_CAR    shift, and go to state 33
    CONST_ENT    shift, and go to state 34
    CONST_REAL   shift, and go to state 35
    COND_SI      shift, and go to state 36
    BUCLE        shift, and go to state 37
    FOR_INI      shift, and go to state 38
    ENTRADA      shift, and go to state 39
    SALIDA       shift, and go to state 40
    DEVUELVE     shift, and go to state 41
    OP_INI_LIST  shift, and go to state 42

    Bloque              go to state 43
    Sentencia           go to state 93
    Sentencia_asig      go to state 48
    Expresion           go to state 49
    Constante           go to state 50
    Constante_lista     go to state 51
    Sentencia_if        go to state 52
    Sentencia_while     go to state 53
    Sentencia_for       go to state 54
    Sentencia_entrada   go to state 55
    Sentencia_salida    go to state 56
    Sentencia_return    go to state 57
    Sentencia_iterar    go to state 58
    Sentencia_comienzo  go to state 59


State 47

   28 Sentencias: Sentencia .

    $default  reduce using rule 28 (Sentencias)


State 48

   30 Sentencia: Sentencia_asig . DELIMIT

    DELIMIT  shift, and go to state 94


State 49

   46 Expresion: Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion
   90 Sentencia_iterar: Expresion . OP_AVR_RETR

    OP_OR          shift, and go to state 95
    OP_XOR         shift, and go to state 96
    OP_AND         shift, and go to state 97
    OP_IGUALDAD    shift, and go to state 98
    OP_RELACION    shift, and go to state 99
    MAS_MENOS      shift, and go to state 100
    MAS_MAS        shift, and go to state 101
    OP_LIST_CONCA  shift, and go to state 102
    OP_BIN_LISTA   shift, and go to state 103
    OP_MULTI_DIV   shift, and go to state 104
    OP_AVR_RETR    shift, and go to state 105


State 50

   57 Expresion: Constante .

    $default  reduce using rule 57 (Expresion)


State 51

   65 Constante: Constante_lista .

    $default  reduce using rule 65 (Constante)


State 52

   31 Sentencia: Sentencia_if .

    $default  reduce using rule 31 (Sentencia)


State 53

   32 Sentencia: Sentencia_while .

    $default  reduce using rule 32 (Sentencia)


State 54

   33 Sentencia: Sentencia_for .

    $default  reduce using rule 33 (Sentencia)


State 55

   34 Sentencia: Sentencia_entrada . DELIMIT

    DELIMIT  shift, and go to state 106


State 56

   35 Sentencia: Sentencia_salida . DELIMIT

    DELIMIT  shift, and go to state 107


State 57

   36 Sentencia: Sentencia_return . DELIMIT

    DELIMIT  shift, and go to state 108


State 58

   37 Sentencia: Sentencia_iterar . DELIMIT

    DELIMIT  shift, and go to state 109


State 59

   38 Sentencia: Sentencia_comienzo . DELIMIT

    DELIMIT  shift, and go to state 110


State 60

   15 Lista_ident: Lista_ident error . IDENT

    IDENT  shift, and go to state 111


State 61

    8 Declar_variables: Tipo Lista_ident DELIMIT .

    $default  reduce using rule 8 (Declar_variables)


State 62

   14 Lista_ident: Lista_ident SEPAR . IDENT

    IDENT  shift, and go to state 112


State 63

   60 Expresion: error .

    $default  reduce using rule 60 (Expresion)


State 64

   56 Expresion: IDENT .
   58          | IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   59          | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  shift, and go to state 78

    $default  reduce using rule 56 (Expresion)


State 65

   45 Expresion: MAS_MENOS Expresion .
   46          | Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion

    $default  reduce using rule 45 (Expresion)


State 66

   44 Expresion: OP_UNARIO Expresion .
   46          | Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion

    $default  reduce using rule 44 (Expresion)


State 67

   43 Expresion: PAREN_IZQ Expresion . PAREN_DER
   46          | Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion

    OP_OR          shift, and go to state 95
    OP_XOR         shift, and go to state 96
    OP_AND         shift, and go to state 97
    OP_IGUALDAD    shift, and go to state 98
    OP_RELACION    shift, and go to state 99
    MAS_MENOS      shift, and go to state 100
    MAS_MAS        shift, and go to state 101
    OP_LIST_CONCA  shift, and go to state 102
    OP_BIN_LISTA   shift, and go to state 103
    OP_MULTI_DIV   shift, and go to state 104
    PAREN_DER      shift, and go to state 113


State 68

   70 Constante_lista: CORCH_IZQ CORCH_DER .

    $default  reduce using rule 70 (Constante_lista)


State 69

   72 Lista_bool: CONST_BOOL .

    $default  reduce using rule 72 (Lista_bool)


State 70

   74 Lista_car: CONST_CAR .

    $default  reduce using rule 74 (Lista_car)


State 71

   76 Lista_ent: CONST_ENT .

    $default  reduce using rule 76 (Lista_ent)


State 72

   78 Lista_real: CONST_REAL .

    $default  reduce using rule 78 (Lista_real)


State 73

   66 Constante_lista: CORCH_IZQ Lista_bool . CORCH_DER
   71 Lista_bool: Lista_bool . SEPAR CONST_BOOL

    CORCH_DER  shift, and go to state 114
    SEPAR      shift, and go to state 115


State 74

   67 Constante_lista: CORCH_IZQ Lista_car . CORCH_DER
   73 Lista_car: Lista_car . SEPAR CONST_CAR

    CORCH_DER  shift, and go to state 116
    SEPAR      shift, and go to state 117


State 75

   68 Constante_lista: CORCH_IZQ Lista_ent . CORCH_DER
   75 Lista_ent: Lista_ent . SEPAR CONST_ENT

    CORCH_DER  shift, and go to state 118
    SEPAR      shift, and go to state 119


State 76

   69 Constante_lista: CORCH_IZQ Lista_real . CORCH_DER
   77 Lista_real: Lista_real . SEPAR CONST_REAL

    CORCH_DER  shift, and go to state 120
    SEPAR      shift, and go to state 121


State 77

   19 Cabecera_funcion: TIPO IDENT . PAREN_IZQ Lista_parametros PAREN_DER

    PAREN_IZQ  shift, and go to state 122


State 78

   58 Expresion: IDENT PAREN_IZQ . Lista_expresiones PAREN_DER
   59          | IDENT PAREN_IZQ . PAREN_DER

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    PAREN_DER   shift, and go to state 123
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Lista_expresiones  go to state 124
    Expresion          go to state 125
    Constante          go to state 50
    Constante_lista    go to state 51


State 79

   39 Sentencia_asig: IDENT IGUAL . Expresion

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 126
    Constante        go to state 50
    Constante_lista  go to state 51


State 80

   79 Sentencia_if: COND_SI PAREN_IZQ . Expresion PAREN_DER Sentencia
   80             | COND_SI PAREN_IZQ . Expresion PAREN_DER Sentencia COND_OTRO Sentencia

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 127
    Constante        go to state 50
    Constante_lista  go to state 51


State 81

   81 Sentencia_while: BUCLE PAREN_IZQ . Expresion PAREN_DER Sentencia

    error       shift, and go to state 63
    MAS_MENOS   shift, and go to state 26
    OP_UNARIO   shift, and go to state 27
    PAREN_IZQ   shift, and go to state 28
    CORCH_IZQ   shift, and go to state 29
    IDENT       shift, and go to state 64
    CONST_BOOL  shift, and go to state 32
    CONST_CAR   shift, and go to state 33
    CONST_ENT   shift, and go to state 34
    CONST_REAL  shift, and go to state 35

    Expresion        go to state 128
    Constante        go to state 50
    Constante_lista  go to state 51


State 82

   39 Sentencia_asig: IDENT . IGUAL Expresion

    IGUAL  shift, and go to state 79


State 83

   82 Sentencia_for: FOR_INI Sentencia_asig . FOR_STOP Expresion FOR_STEP Expresion FOR_DO Sentencia

    FOR_STOP  shift, and go to state 129


State 84

   14 Lista_ident: Lista_ident . SEPAR IDENT
   15            | Lista_ident . error IDENT
   83 Sentencia_entrada: ENTRADA Lista_ident .

    error  shift, and go to state 60
    SEPAR  shift, and go to state 62

    DELIMIT  reduce using rule 83 (Sentencia_entrada)


State 85

   88 Expr_cadena: CONST_CADENA .

    $default  reduce using rule 88 (Expr_cadena)


State 86

   46 Expresion: Expresion . MAS_MENOS Expresion
   47          | Expresion . OP_BIN_LISTA Expresion
   48          | Expresion . OP_LIST_CONCA Expresion
   49          | Expresion . OP_OR Expresion
   50          | Expresion . OP_XOR Expresion
   51          | Expresion . OP_AND Expresion
   52          | Expresion . OP_RELACION Expresion
   53          | Expresion . OP_IGUALDAD Expresion
   54          | Expresion . OP_MULTI_DIV Expresion
   55          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion
   87 Expr_cadena: Expresion .

    OP_OR          shift, and go to state 95
    OP_XOR         shift, and go to state 96
    OP_AND         shift, and go to state 97
    OP_IGUALDAD    shift, and go to state 98
    OP_RELACION    shift, and go to state 99
    MAS_MENOS      shift, and go to state 100
    MAS_MAS        shift, and go to state 101
    OP_LIST_CONCA  shift, and go to state 102
    OP_BIN_LISTA   shift, and go to state 103
    OP_MULTI_DIV   shift, and go to state 104

    $default  reduce using rule 87 (Expr_cadena)


State 87

   84 Sentencia_salida: SALIDA Lista_expr_cadena .
   85 Lista_expr_cadena: Lista_expr_cadena . SEPAR Expr_cadena

    SEPAR  shift, and go to state 130

    $default  reduce using rule 84 (Sentencia_salida)


State 88

   86 Lista_expr_cadena: Expr_cadena .

    $default  reduce using rule 86 (Lista_expr_cadena)


State 89
